--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,123 +1,194 @@
-* {
-    border: none;
-    border-radius: 0;
-    font-family: JetBrainsMono Nerd Font, monospace;
-    font-weight: bold;
-    font-size: 14px;
-    min-height: 0;
-}
+/* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
+/* .......Crystal Clear....................... */
+/* --- 👍 designed by https://github.com/Krautt  👍 --- */
 
+*{
+	font-family: "JetBrainsMono Nerd Font";
+	font-weight: bold;
+	min-height: 0;	
+	/* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
+	font-size: 97%;
+	font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+}
+	
 window#waybar {
-    background: rgba(21, 18, 27, 0);
-    color: #cdd6f4;
+	background:transparent;
+	border-radius: 1px;
+	color: whitesmoke;
+}
+	
+window#waybar.hidden {
+	opacity: 0.5;
 }
 
+window#waybar.empty	
+window#waybar.empty #window {
+   padding: 0px;
+   border: 0px;
+   background-color: transparent;
+}
+
+#taskbar button,	   
 #workspaces button {
-    padding: 5px;
-    color: #555869;
-    margin-right: 5px;
+	color: #6E6A86;
+   	box-shadow: none;
+	text-shadow: none;
+   	padding: 0px;
+   	border-radius: 9px;
+   	padding-left: 4px;
+   	padding-right: 4px;
+   	animation: gradient_f 20s ease-in infinite;
+   	transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
 }
-
+   
 #workspaces button.active {
-    color: #a6adc8;
+	color: whitesmoke;
+   	border-radius: 15px 15px 15px 15px;
+   	padding-left: 8px;
+   	padding-right: 8px;
+   	animation: gradient_f 20s ease-in infinite;
+   	transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
-
+  
 #workspaces button.focused {
-    color: #a6adc8;
-    background: #eba0ac;
-    border-radius: 10px;
+	color: #d8dee9;
 }
-
+   
 #workspaces button.urgent {
-    color: #11111b;
-    background: #a6e3a1;
-    border-radius: 10px;
+	color: #11111b;
+	border-radius: 10px;
 }
-
+	   
 #workspaces button:hover {
-    background: #cdd6f4;
-    color: #11111b; 
-    border-radius: 10px;
+	color: whitesmoke;
+    border-radius: 15px;
+ 	padding-left: 2px;
+    padding-right: 2px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
-
-#window,
-#clock,
+	
+#backlight,
 #battery,
-#pulseaudio,
-#network,
+#bluetooth,
+#clock,
 #cpu,
+#disk,
+#idle_inhibitor,
+#keyboard-state,
 #memory,
-#workspaces,
+#mode,
+#mpris,
+#network,
+#power-profiles-daemon,
+#pulseaudio,
+#taskbar,
+#temperature,
 #tray,
-#backlight {
-    background: #1e1e2e;
-    padding: 0px 10px;
-    margin: 3px 0px;
-    margin-top: 5px;
-    /* border: 1px solid #181825; */
+#window,
+#wireplumber,
+#workspaces,
+#custom-backlight,
+#custom-browser,
+#custom-cava_mviz,
+#custom-cycle_wall,
+#custom-dot_update,
+#custom-file_manager,
+#custom-keybinds,
+#custom-keyboard,
+#custom-light_dark,
+#custom-lock,
+#custom-hint,
+#custom-hypridle,
+#custom-menu,
+#custom-playerctl,
+#custom-power_vertical,
+#custom-power,
+#custom-settings,
+#custom-spotify,
+#custom-swaync,
+#custom-tty,
+#custom-updater,
+#custom-weather,
+#custom-weather.clearNight,
+#custom-weather.cloudyFoggyDay,
+#custom-weather.cloudyFoggyNight,
+#custom-weather.default 
+#custom-weather.rainyDay,
+#custom-weather.rainyNight,
+#custom-weather.severe,
+#custom-weather.showyIcyDay,
+#custom-weather.snowyIcyNight,
+#custom-weather.sunnyDay {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-right: 6px;
+	padding-left: 6px;
+}
+	 
+#temperature.critical {
+	background-color: #ff0000;
+}
+   
+@keyframes blink {
+	to {
+	color: #000000;
+	   }
 }
 
-#backlight {
-    border-radius: 10px 0px 0px 10px;
+/*-----Indicators----*/
+#custom-hypridle.notactive,
+#idle_inhibitor.activated {
+	color: #39FF14;
 }
 
-#tray {
-    border-radius: 10px;
-    margin-right: 10px;
+#taskbar button:hover {
+    padding-left: 3px;
+    padding-right: 3px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+   
+#taskbar button.active {
+	background-color: #7f849c;
+    padding-left: 12px;
+    padding-right: 12px;
+    animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+}
+	   
+#battery.critical:not(.charging) {
+	color: #f53c3c;
+	animation-name: blink;
+	animation-duration: 3.0s;
+	animation-timing-function: steps(12);
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
-#workspaces {
-    background: #1e1e2e;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
+#backlight-slider slider,
+#pulseaudio-slider slider {
+	min-width: 0px;
+	min-height: 0px;
+	opacity: 0;
+	background-image: none;
+	border: none;
+	box-shadow: none;
 }
 
-#cpu {
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
+#backlight-slider trough,
+#pulseaudio-slider trough {
+	min-width: 80px;  
+	min-height: 10px; 
+	border-radius: 5px;
+	background-color: black;
 }
 
-#memory {
-    border-radius: 10px 0px 0px 10px;
+#backlight-slider highlight,
+#pulseaudio-slider highlight {
+	min-height: 10px; 
+	border-radius: 5px;
+	background-color: wheat;
 }
-
-#window {
-    border-radius: 10px;
-    margin-left: 60px;
-    margin-right: 60px;
-}
-
-#clock {
-    color: #a6adc8;
-    border-radius: 10px 10px 10px 10px;
-    margin-left: 5px;
-    border-right: 0px;
-}
-
-#network {
-    color:  #a6adc8;
-    border-radius: 10px 0px 0px 10px;
-
-}
-
-#pulseaudio {
-    color: #a6adc8;
-    border-left: 0px;
-    border-right: 0px;
-}
-
-#pulseaudio.microphone {
-    color: #a6adc8;
-    border-radius: 0px 10px 10px 0px;
-    border-left: 0px;
-    border-right: 0px;
-    margin-right: 5px;
-}
-
-#battery {
-    color:#a6adc8;
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
-}
+	
+	
